--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-cron": "^2.0.3"
+    "axion": "^0.1.0",
+    "node-cron": "^2.0.3",
+    "node-localstorage": "^2.1.6"
   }
 }
