--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axion": "^0.1.0",
+    "axios": "^0.19.2",
     "node-cron": "^2.0.3",
     "node-localstorage": "^2.1.6"
   }
